--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,6 +19,7 @@ jobs:
 
   build-cross-qemu:
     runs-on: ubuntu-latest
+    container: gengjiawen/libuv
     name: build-cross-qemu-${{ matrix.config.target }}
 
     strategy:
@@ -45,15 +46,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Install QEMU
-        # this ensure install latest qemu on ubuntu, apt get version is old
-        env:
-          QEMU_SRC: "http://archive.ubuntu.com/ubuntu/pool/universe/q/qemu"
-          QEMU_VER: "qemu-user-static_4\\.2-.*_amd64.deb$"
-        run: |
-          DEB=`curl -s $QEMU_SRC/ | grep -o -E 'href="([^"#]+)"' | cut -d'"' -f2 | grep $QEMU_VER | tail -1`
-          wget $QEMU_SRC/$DEB
-          sudo dpkg -i $DEB
       - name: Install ${{ matrix.config.toolchain }}
         run: |
           sudo apt update
