--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,8 +48,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install ${{ matrix.config.toolchain }}
         run: |
-          sudo apt update
-          sudo apt install ${{ matrix.config.toolchain }} -y
+          apt install ${{ matrix.config.toolchain }} -y
       - name: Build
         run: |
           mkdir build
