--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install ${{ matrix.config.toolchain }}
         run: |
-          apt install ${{ matrix.config.toolchain }} -y
+          sudo apt install ${{ matrix.config.toolchain }} -y
       - name: Build
         run: |
           mkdir build
