--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     container: 
      image: gengjiawen/libuv
-     options: --user 1001
+     options: --user user
     name: build-cross-qemu-${{ matrix.config.target }}
 
     strategy:
