--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,6 @@ jobs:
     runs-on: ubuntu-latest
     container: 
      image: gengjiawen/libuv
-     options: --user user
     name: build-cross-qemu-${{ matrix.config.target }}
 
     strategy:
@@ -59,4 +58,5 @@ jobs:
           ls -lh
       - name: Test
         run: |
+          su user
           ${{ matrix.config.qemu }} build/uv_run_tests_a
