--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -58,4 +58,4 @@ jobs:
           ls -lh
       - name: Test
         run: |
-          su user && whoami && {{ matrix.config.qemu }} build/uv_run_tests_a
+          ${{ matrix.config.qemu }} build/uv_run_tests_a
